--- a/FantasticFox.html
+++ b/FantasticFox.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PADS Paulton Amateur Dramatics - The Business of Murder</title>
+  <title>PADS Paulton Amateur Dramatics - Fantastic Mr Fox 2025</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -96,10 +96,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Beauty and the Beast Details</h2>
+          <h2>Fantastic Mr Fox Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Beauty and the Beast Details</li>
+            <li>Fantastic Mr Fox Details</li>
           </ol>
         </div>
 
@@ -116,7 +116,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/BB/bb1.JPG" alt="">
                 </div>
 
@@ -226,7 +226,7 @@
 
                 <div class="swiper-slide">
                   <img src="assets/img/BB/bb28.JPG" alt="">
-                </div>
+                </div> -->
                 
               </div>
               <div class="swiper-pagination"></div>
@@ -237,19 +237,19 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Show Name</strong>: Beauty and the Beast</li>
-                <li><strong>Performance date</strong>: February 2025</li>
+                <li><strong>Show Name</strong>: Fantastic Mr Fox</li>
+                <li><strong>Performance date</strong>: September 2025</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>The cast and the story</h2>
-              <p>In a faraway land, a vain and selfish prince is cursed by a powerful witch, transforming him into a monstrous Beast 
+              <!-- <p>In a faraway land, a vain and selfish prince is cursed by a powerful witch, transforming him into a monstrous Beast 
                 until he learns to love and be loved in return. Meanwhile, Belle, a kind and intelligent young woman, lives in a village 
                 where she is admired for her beauty but misunderstood for her love of books. She is often pestered by the arrogant Danton, 
                 a local hunter, who is adored by the giggling girls.</p>
-              <p>The Cast:</p>
-              <ul>
+              <p>The Cast:</p> -->
+              <!-- <ul>
                 <li><b>Beast:</b> Martin Nosworthy</li>
                 <li><b>Belle:</b> Jaime Bach</li> 
                 <li><b>Dad:</b> Sadie Potts</li> 
@@ -277,7 +277,7 @@
                 <li><b>Directors/Producers:</b> Amy Rogers, James Cradock</li>
                 <li><b>Writer:</b> Clare Ivory</li>
                 <li><b>Technical:</b> Andy Patterson, Josef Harle</li>
-              </ul>
+              </ul> -->
 
             </div>
           </div>
