--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/Fox.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Fantastic Mr Fox</h4>
+                <div class="portfolio-links">
+                  <a href="FantasticFox.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/BB.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Beauty and the Beast</h4>
@@ -710,7 +722,7 @@
 
         <div class="section-title">
           <h2>Next Show!</h2>
-          <p>Youth Production: Fantastic Mr Fox</p>
+          <p>Little Red Riding Hood Pantomime</p>
         </div>
         
         <div class="row">
@@ -720,7 +732,7 @@
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
                 <a href="https://ticketsource.co.uk/paultonamateurdramatics" target="_blank" rel="noopener noreferrer">
-                  <img src="assets/img/Fox.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/RedRidingHood.jpeg" class="img-fluid" alt="">
                 </a>
               </div>
               <!-- <div class="member-info">
